add http service to user

--- a/frontend/src/app/components/account-settings/account-settings.component.html
+++ b/frontend/src/app/components/account-settings/account-settings.component.html
@@ -41,9 +41,9 @@
         <span class="inline-data__value">{{ userData.height }} cm</span>
       </div>
       <div class="inline-data">
-        <span class="inline-data__name text">Rodzaj diety: </span>
+        <span class="inline-data__name text">Cel diety: </span>
         <span class="inline-data__dotted-space"></span>
-        <span class="inline-data__value text">{{ userData.dietType }}</span>
+        <span class="inline-data__value text">{{ userData.dietPurpose }}</span>
       </div>
       <div class="inline-data">
         <span class="inline-data__name text">Aktywność fizyczna: </span>
