link to add recipe in account setting

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -20,6 +20,15 @@ body {
   padding: 0;
 }
 
+.link {
+  color: $font-color;
+  font-weight: 500;
+
+  &:hover {
+    color: $font-color;
+  }
+}
+
 h1,
 h2,
 h3,
