--- a/frontend/src/app/components/account-settings/account-settings.component.html
+++ b/frontend/src/app/components/account-settings/account-settings.component.html
@@ -36,7 +36,7 @@
         <span class="inline-data__value text">{{ userData.weight }} kg</span>
       </div>
       <div class="inline-data">
-        <span class="inline-data__name">Wzrost: </span>
+        <span class="inline-data__name text">Wzrost: </span>
         <span class="inline-data__dotted-space"></span>
         <span class="inline-data__value">{{ userData.height }} cm</span>
       </div>
@@ -129,11 +129,11 @@
           </div>
         </div>
       </div>
-      <div
-        *ngIf="!userData.recipes.length"
-        class="user-recipes-container__list text"
-      >
+      <div *ngIf="!userData.recipes.length" class="data-container text">
         <p class="user-recipes-container__header">Nie dodano przepisów.</p>
+        <a class="user-recipes-container__header link" routerLink="/recipes/add"
+          >Dodaj przepis</a
+        >
       </div>
     </div>
   </mat-card>
