added diet type to recipe

--- a/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
@@ -148,6 +148,44 @@
               >
             </mat-radio-group>
           </div>
+          <p>Typ diety</p>
+          <div
+            class="card__input-container card__input-container--padding-bottom dietType"
+          >
+            <mat-radio-group formControlName="dietType">
+              <mat-radio-button
+                class="card__input-container--radio-button"
+                value="wysokobiałkowa"
+                >wysokobiałkowa</mat-radio-button
+              >
+              <mat-radio-button
+                class="card__input-container--radio-button"
+                value="bezglutenowa"
+                >bezglutenowa</mat-radio-button
+              >
+              <mat-radio-button
+                class="card__input-container--radio-button"
+                value="ketogeniczna"
+                >ketogeniczna</mat-radio-button
+              >
+              <p class="break"></p>
+              <mat-radio-button
+                class="card__input-container--radio-button"
+                value="wegańska"
+                >wegańska</mat-radio-button
+              >
+              <mat-radio-button
+                class="card__input-container--radio-button"
+                value="wegetariańska"
+                >wegetariańska</mat-radio-button
+              >
+              <mat-radio-button
+                class="card__input-container--radio-button"
+                value="inna"
+                >inna</mat-radio-button
+              >
+            </mat-radio-group>
+          </div>
           <div>
             <button
               mat-raised-button
