--- a/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.scss
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.scss
@@ -284,6 +284,10 @@ input[type="number"] {
     flex-direction: column;
   }
 
+  .break {
+    visibility: hidden;
+  }
+
   .app-add-new-recipe {
     .card {
       p {
