add recipe service

--- a/frontend/src/app/components/recipes/add-new-recipe/add-another-step-to-recipe/add-another-step-to-recipe.component.html
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-another-step-to-recipe/add-another-step-to-recipe.component.html
@@ -3,7 +3,7 @@
     <mat-label>Krok {{ index + 1 }}</mat-label>
     <textarea
       matInput
-      formControlName="stepName"
+      formControlName="name"
       maxlength="100"
       required
     ></textarea>
