--- a/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
@@ -35,7 +35,7 @@
               class="card__input-container--input"
             >
               <mat-label>Nazwa</mat-label>
-              <input matInput formControlName="recipeName" maxlength="65" />
+              <input matInput formControlName="name" maxlength="65" />
               <mat-error>To pole jest wymagane.</mat-error>
             </mat-form-field>
           </div>
@@ -48,13 +48,12 @@
               <textarea
                 matInput
                 class="card__input-container--input-description"
-                formControlName="recipeDescription"
+                formControlName="description"
                 maxlength="350"
               ></textarea>
               <mat-hint align="end"
                 >{{
-                  mainRecipeDataFormGroup.get("recipeDescription")?.value
-                    ?.length
+                  mainRecipeDataFormGroup.get("description")?.value?.length
                 }}
                 / 350</mat-hint
               >
@@ -69,7 +68,7 @@
               <mat-label>Czas</mat-label>
               <input
                 matInput
-                formControlName="recipeTime"
+                formControlName="cookingTime"
                 type="number"
                 max="6000"
                 min="1"
@@ -88,7 +87,7 @@
             </button>
             <input
               class="card__input-container--person-count-input"
-              formControlName="recipePersonCount"
+              formControlName="portions"
             />
             <button mat-mini-fab (click)="increasePersonCount()">
               <mat-icon>add</mat-icon>
@@ -98,20 +97,20 @@
           <div
             class="card__input-container card__input-container--padding-bottom"
           >
-            <mat-radio-group formControlName="recipeLevel">
+            <mat-radio-group formControlName="level">
               <mat-radio-button
                 class="card__input-container--radio-button"
-                value="Łatwy"
+                value="łatwy"
                 >Łatwy</mat-radio-button
               >
               <mat-radio-button
                 class="card__input-container--radio-button"
-                value="Średni"
+                value="średni"
                 >Średni</mat-radio-button
               >
               <mat-radio-button
                 class="card__input-container--radio-button"
-                value="Trudny"
+                value="trudny"
                 >Trudny</mat-radio-button
               >
             </mat-radio-group>
@@ -120,10 +119,10 @@
           <div
             class="card__input-container card__input-container--padding-bottom"
           >
-            <mat-radio-group formControlName="recipeCategory">
+            <mat-radio-group formControlName="category">
               <mat-radio-button
                 class="card__input-container--radio-button"
-                value="Śniadanie"
+                value="śniadanie"
                 >Śniadanie</mat-radio-button
               >
               <mat-radio-button
@@ -133,17 +132,17 @@
               >
               <mat-radio-button
                 class="card__input-container--radio-button"
-                value="Obiad"
+                value="obiad"
                 >Obiad</mat-radio-button
               >
               <mat-radio-button
                 class="card__input-container--radio-button"
-                value="Podwieczorek"
+                value="podwieczorek"
                 >Podwieczorek</mat-radio-button
               >
               <mat-radio-button
                 class="card__input-container--radio-button"
-                value="Kolacja"
+                value="kolacja"
                 >Kolacja</mat-radio-button
               >
             </mat-radio-group>
@@ -156,7 +155,7 @@
               <mat-radio-button
                 class="card__input-container--radio-button"
                 value="wysokobiałkowa"
-                >wysokobiałkowa</mat-radio-button
+                >Wysokobiałkowa</mat-radio-button
               >
               <mat-radio-button
                 class="card__input-container--radio-button"
@@ -166,23 +165,23 @@
               <mat-radio-button
                 class="card__input-container--radio-button"
                 value="ketogeniczna"
-                >ketogeniczna</mat-radio-button
+                >Ketogeniczna</mat-radio-button
               >
               <p class="break"></p>
               <mat-radio-button
                 class="card__input-container--radio-button"
                 value="wegańska"
-                >wegańska</mat-radio-button
+                >Wegańska</mat-radio-button
               >
               <mat-radio-button
                 class="card__input-container--radio-button"
                 value="wegetariańska"
-                >wegetariańska</mat-radio-button
+                >Wegetariańska</mat-radio-button
               >
               <mat-radio-button
                 class="card__input-container--radio-button"
                 value="inna"
-                >inna</mat-radio-button
+                >Inna</mat-radio-button
               >
             </mat-radio-group>
           </div>
@@ -287,14 +286,12 @@
           </div>
         </form>
       </mat-step>
-      <mat-step
-        [completed]="recipeProductsAreValid && recipeProducts.length > 0"
-      >
+      <mat-step [completed]="productsAreValid && products.length > 0">
         <form>
           <ng-template matStepLabel>Składniki</ng-template>
           <div
             class="card__input-container"
-            *ngFor="let product of recipeProducts; let i = index"
+            *ngFor="let product of products; let i = index"
           >
             <app-add-product-to-recipe
               [product]="product"
@@ -303,7 +300,7 @@
             ></app-add-product-to-recipe>
           </div>
           <button
-            [disabled]="!recipeProductsAreValid"
+            [disabled]="!productsAreValid"
             class="card__input-container--margin-bottom"
             (click)="addAnotherProduct()"
             mat-mini-fab
@@ -313,7 +310,7 @@
           <div>
             <button mat-button matStepperPrevious>Powrót</button>
             <button
-              [disabled]="!recipeProductsAreValid || !recipeProducts.length"
+              [disabled]="!productsAreValid || !products.length"
               mat-button
               matStepperNext
               class="card__next-button"
@@ -324,12 +321,12 @@
         </form>
       </mat-step>
 
-      <mat-step [completed]="recipeStepsAreValid && recipeSteps.length > 0">
+      <mat-step [completed]="stepsAreValid && steps.length > 0">
         <form>
           <ng-template matStepLabel>Przepis</ng-template>
           <div
             class="card__input-container"
-            *ngFor="let recipeStep of recipeSteps; let i = index"
+            *ngFor="let recipeStep of steps; let i = index"
           >
             <app-add-another-step-to-recipe
               [index]="i"
@@ -339,7 +336,7 @@
             ></app-add-another-step-to-recipe>
           </div>
           <button
-            [disabled]="!recipeStepsAreValid"
+            [disabled]="!stepsAreValid"
             class="card__input-container--margin-bottom"
             (click)="addAnotherRecipeStep()"
             mat-mini-fab
@@ -349,7 +346,7 @@
           <div>
             <button mat-button matStepperPrevious>Powrót</button>
             <button
-              [disabled]="!recipeStepsAreValid || !recipeSteps.length"
+              [disabled]="!stepsAreValid || !steps.length"
               mat-button
               matStepperNext
               class="card__next-button"
