fixed adding recipe

--- a/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
@@ -160,7 +160,7 @@
               <mat-radio-button
                 class="card__input-container--radio-button"
                 value="bezglutenowa"
-                >bezglutenowa</mat-radio-button
+                >Bezglutenowa</mat-radio-button
               >
               <mat-radio-button
                 class="card__input-container--radio-button"
