--- a/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
@@ -78,7 +78,7 @@
               <mat-error>To pole jest wymagane.</mat-error>
             </mat-form-field>
           </div>
-          <p>Ilość osób</p>
+          <p>Ilość porcji</p>
           <div
             class="card__input-container card__input-container--padding-bottom"
           >
@@ -93,97 +93,100 @@
               <mat-icon>add</mat-icon>
             </button>
           </div>
-          <p>Poziom zaawansowania</p>
-          <div
-            class="card__input-container card__input-container--padding-bottom"
-          >
-            <mat-radio-group formControlName="level">
-              <mat-radio-button
-                class="card__input-container--radio-button"
-                value="łatwy"
-                >Łatwy</mat-radio-button
-              >
-              <mat-radio-button
-                class="card__input-container--radio-button"
-                value="średni"
-                >Średni</mat-radio-button
-              >
-              <mat-radio-button
-                class="card__input-container--radio-button"
-                value="trudny"
-                >Trudny</mat-radio-button
-              >
-            </mat-radio-group>
-          </div>
-          <p>Kategoria</p>
-          <div
-            class="card__input-container card__input-container--padding-bottom"
-          >
-            <mat-radio-group formControlName="category">
-              <mat-radio-button
-                class="card__input-container--radio-button"
-                value="śniadanie"
-                >Śniadanie</mat-radio-button
-              >
-              <mat-radio-button
-                class="card__input-container--radio-button"
-                value="II śniadanie"
-                >II śniadanie</mat-radio-button
-              >
-              <mat-radio-button
-                class="card__input-container--radio-button"
-                value="obiad"
-                >Obiad</mat-radio-button
-              >
-              <mat-radio-button
-                class="card__input-container--radio-button"
-                value="podwieczorek"
-                >Podwieczorek</mat-radio-button
-              >
-              <mat-radio-button
-                class="card__input-container--radio-button"
-                value="kolacja"
-                >Kolacja</mat-radio-button
-              >
-            </mat-radio-group>
-          </div>
-          <p>Typ diety</p>
-          <div
-            class="card__input-container card__input-container--padding-bottom dietType"
-          >
-            <mat-radio-group formControlName="dietType">
-              <mat-radio-button
-                class="card__input-container--radio-button"
-                value="wysokobiałkowa"
-                >Wysokobiałkowa</mat-radio-button
-              >
-              <mat-radio-button
-                class="card__input-container--radio-button"
-                value="bezglutenowa"
-                >Bezglutenowa</mat-radio-button
-              >
-              <mat-radio-button
-                class="card__input-container--radio-button"
-                value="ketogeniczna"
-                >Ketogeniczna</mat-radio-button
-              >
-              <p class="break"></p>
-              <mat-radio-button
-                class="card__input-container--radio-button"
-                value="wegańska"
-                >Wegańska</mat-radio-button
-              >
-              <mat-radio-button
-                class="card__input-container--radio-button"
-                value="wegetariańska"
-                >Wegetariańska</mat-radio-button
-              >
-              <mat-radio-button
-                class="card__input-container--radio-button"
-                value="inna"
-                >Inna</mat-radio-button
-              >
-            </mat-radio-group>
+          <div class="card__input-container row">
+            <div
+              class="card__input-container--padding-bottom col-lg-2 col-md-12 col-sm-12"
+            >
+              <p class="card__input-container--input-title">Kategoria</p>
+              <mat-radio-group formControlName="category">
+                <mat-radio-button
+                  class="card__input-container--radio-button"
+                  value="śniadanie"
+                  >Śniadanie</mat-radio-button
+                >
+                <mat-radio-button
+                  class="card__input-container--radio-button"
+                  value="II śniadanie"
+                  >II śniadanie</mat-radio-button
+                >
+                <mat-radio-button
+                  class="card__input-container--radio-button"
+                  value="obiad"
+                  >Obiad</mat-radio-button
+                >
+                <mat-radio-button
+                  class="card__input-container--radio-button"
+                  value="podwieczorek"
+                  >Podwieczorek</mat-radio-button
+                >
+                <mat-radio-button
+                  class="card__input-container--radio-button"
+                  value="kolacja"
+                  >Kolacja</mat-radio-button
+                >
+              </mat-radio-group>
+            </div>
+            <div
+              class="card__input-container--padding-bottom col-lg-2 col-md-12 col-sm-12"
+            >
+              <p class="card__input-container--input-title">
+                Poziom zaawansowania
+              </p>
+              <mat-radio-group formControlName="level">
+                <mat-radio-button
+                  class="card__input-container--radio-button"
+                  value="łatwy"
+                  >Łatwy</mat-radio-button
+                >
+                <mat-radio-button
+                  class="card__input-container--radio-button"
+                  value="średni"
+                  >Średni</mat-radio-button
+                >
+                <mat-radio-button
+                  class="card__input-container--radio-button"
+                  value="trudny"
+                  >Trudny</mat-radio-button
+                >
+              </mat-radio-group>
+            </div>
+            <div
+              class="card__input-container--padding-bottom col-lg-2 col-md-12 col-sm-12"
+            >
+              <p class="card__input-container--input-title">Typ diety</p>
+              <mat-radio-group formControlName="dietType">
+                <mat-radio-button
+                  class="card__input-container--radio-button"
+                  value="wysokobiałkowa"
+                  >Wysokobiałkowa</mat-radio-button
+                >
+                <mat-radio-button
+                  class="card__input-container--radio-button"
+                  value="bezglutenowa"
+                  >Bezglutenowa</mat-radio-button
+                >
+                <mat-radio-button
+                  class="card__input-container--radio-button"
+                  value="ketogeniczna"
+                  >Ketogeniczna</mat-radio-button
+                >
+                <mat-radio-button
+                  class="card__input-container--radio-button"
+                  value="wegańska"
+                  >Wegańska</mat-radio-button
+                >
+                <mat-radio-button
+                  class="card__input-container--radio-button"
+                  value="wegetariańska"
+                  >Wegetariańska</mat-radio-button
+                >
+                <mat-radio-button
+                  class="card__input-container--radio-button"
+                  value="inna"
+                  >Inna</mat-radio-button
+                >
+              </mat-radio-group>
+            </div>
           </div>
           <div>
             <button
