--- a/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.scss
+++ b/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.scss
@@ -79,6 +79,7 @@ mat-checkbox {
         margin-bottom: 10px;
         font-size: 2.5vw;
         font-weight: 500;
+        word-wrap: break-word;
       }
 
       .app-recipe-detail--inline-icon {
@@ -89,6 +90,11 @@ mat-checkbox {
           display: flex;
           align-items: center;
         }
+      }
+
+      .app-recipe-detail--products {
+        max-height: 285px;
+        overflow-x: auto;
       }
 
       .app-recipe-detail--product {
