--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -91,3 +91,30 @@ input[type="number"] {
 .close-delete-icon {
   color: $close-delete-icon-color;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #b0aeae;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b0aeae;
+}
+
+@media (max-width: 576px) {
+  /* width */
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+}
