added header in nutrients container

--- a/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
@@ -204,6 +204,9 @@
       <mat-step [stepControl]="nutrientsFormGroup">
         <form [formGroup]="nutrientsFormGroup">
           <ng-template matStepLabel>Wartości odżywcze</ng-template>
+          <p class="card__input-container--header">
+            Wprowadź wartości odpowiadające całemu przepisowi.
+          </p>
           <div class="card__input-container">
             <mat-form-field
               class="card__input-container--input"
