checking if product already is chosen in add recip

--- a/frontend/src/app/components/recipes/add-new-recipe/add-product-to-recipe/add-product-to-recipe.component.html
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-product-to-recipe/add-product-to-recipe.component.html
@@ -20,8 +20,13 @@
         <span>{{ product.name }}</span>
       </mat-option>
     </mat-autocomplete>
-    <mat-hint *ngIf="productDoesntExist"
-      ><span class="mat-error">Wybierz produkt z listy!</span></mat-hint
+    <mat-hint
+      ><span *ngIf="productDoesntExist" class="mat-error"
+        >Wybierz produkt z listy!</span
+      >
+      <span *ngIf="productIsChosen" class="mat-error"
+        >Produkt został już wprowadzony!</span
+      ></mat-hint
     >
   </mat-form-field>
 
