--- a/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
+++ b/frontend/src/app/components/recipes/add-new-recipe/add-new-recipe.component.html
@@ -301,6 +301,7 @@
           >
             <app-add-product-to-recipe
               [product]="product"
+              [productIdIsChosen]="productIdIsChosen"
               (returnProductData)="saveProductData($event, i)"
               (productToDelete)="deleteProduct(i)"
             ></app-add-product-to-recipe>
