fixed userName in add new recipe

--- a/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.html
+++ b/frontend/src/app/components/recipes/recipe-detail/recipe-detail.component.html
@@ -30,12 +30,12 @@
           <span>{{ recipe.cookingTime }} min</span>
         </div>
         <div class="app-recipe-detail--center-icon">
-          <mat-icon>person_outline</mat-icon>
-          <span>{{ recipe.portions }} porcje</span>
-        </div>
-        <div class="app-recipe-detail--center-icon">
           <mat-icon>signal_cellular_alt</mat-icon>
           <span>{{ recipe.level }}</span>
+        </div>
+        <div class="app-recipe-detail--center-icon">
+          <mat-icon>person_outline</mat-icon>
+          <span>{{ recipe.portions }}</span>
         </div>
       </div>
       <h2>Składniki:</h2>
