--- a/frontend/src/app/components/schedule/schedule.component.scss
+++ b/frontend/src/app/components/schedule/schedule.component.scss
@@ -117,6 +117,11 @@ h2 {
     }
   }
 
+  .details-container__link {
+    padding: 5px 0;
+    text-align: center;
+  }
+
   .details-container__data {
     padding-bottom: 5px;
     display: flex;
