--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="app-navbar">
   <span>
-    <a class="app-navbar__logo" routerLink="/">DietComposer</a>
+    <img class="app-navbar__logo" src="/assets/logo.png" routerLink="/" />
   </span>
   <span class="app-navbar__spacer"></span>
   <ul class="app-navbar__desktop">
